# rust-diesel-rocket-demo

./: .env  Cargo.toml
migrations/2021-09-23-091014_rust_mysql_init/: up.sql
src/: db.rs  main.rs  schema.rs
src/models/: account.rs  image_master.rs  mod.rs
src/pages/: image_save.rs  mod.rs  signin.rs  signup.rs
src/std/: std_image_save.rs  std_singup.rs
