[package]
name = "todo"
version = "0.1.0"
authors = ["keita-f-sato <katanasoulx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sha3 = "0.9.1"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
env_logger = "0.5.12"
log = "0.4.6"
base64 = "0.13.0"
image = "0.23.14"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["mysql"] }

hyper = { version = "0.14", features = ["client"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]


[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]


[[bin]]
name = "std_sign_up"
path = "/Users/satokeita/rust/todo/src/std/std_singup.rs"

[[bin]]
name = "std_save_image"
path = "/Users/satokeita/rust/todo/src/std/std_image_save.rs"